# i24_rcs

./: .gitignore  LICENSE.md  README.md  double_curvilinear_homography.py  homography.py  manual_camera_labeling.py  rcs.py  rcs_test.py  rcs_util.py  setup.cfg  transform_compute.py
.github/workflows/: latest.yml
deprecated data -delete 3-1-2024/save/: P8-P40_curvhg.cpkl
save/: cam_extents.config  landmarks.json
src/i24_rcs/: .#__init__.py  __init__.py  double_curvilinear_homography.py  rcs.py
src/i24rcs/: double_curvilinear_homography.py
take code out of this folder if you use it, otherwise it gets deleted 4-1-2024/: add_rcs_to_gps_data.py  curvilinear_homography.py  rcs_backup.py
