[metadata]
name = i24_rcs
version = 0.7
author = Derek Gloudemans
author_email = derek.gloudemans@vanderbilt.edu
description = Curvilinear roadway coordinate system for I24 MOTION.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DerekGloudemans/i24_rcs

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = torch

[options.packages.find]
where = src
